crates/module-waitlist/tests/snapshots/templates__confirm_subject.snap
---
source: crates/module-waitlist/tests/templates.rs
expression: rendered.subject
---
Confirm your spot on the kontinuum waitlist
