crates/module-waitlist/tests/snapshots/templates__confirmed_subject.snap
---
source: crates/module-waitlist/tests/templates.rs
expression: rendered.subject
---
You are #42 on the kontinuum waitlist
